courses grids spacing and alignments fixes

--- a/app/assets/styles/style.scss
+++ b/app/assets/styles/style.scss
@@ -158,3 +158,10 @@ img {
     border:none;
     border-top: solid 4px #ff459a;
 }
+.explore .grid-container .item {margin:5px;}
+.explore .grid-container .item1 {
+    width: 540px;
+}
+.explore {
+     margin-top: 0;
+}
